# proc-macro-workshop

./: .gitignore  Cargo.toml  lib.rs  main.rs
bitfield/tests/: progress.rs
builder/: Cargo.toml
builder/src/: config.rs  lib.rs  macros.rs  utils.rs
builder/tests/: 07-repeated-field.rs  08-unrecognized-attribute.stderr  09-redefined-prelude-types.rs  progress.rs
debug/: Cargo.toml
debug/src/: lib.rs  lib.rs.bak
debug/tests/: 01_file_ast  02-impl-debug.rs  03-custom-format.rs  03_file_ast  04-type-parameter.rs  04_file_ast  05-phantom-data.rs  06-bound-trouble.rs  07-ast  progress.rs
enums/: Cargo.toml
enums/src/: lib.rs
enums/tests/: 00-parse.rs  01-collect_enum_ident.rs  02-custom-fn-name.rs  progress.rs
seq/: Cargo.toml
seq/src/: lib.rs
seq/tests/: 01-parse-header.rs  02-parse-body.rs  03-expand-four-errors.rs  04-paste-ident.rs  05-repeat-section.rs
sorted/: Cargo.toml
sorted/src/: lib.rs
sorted/tests/: 01-parse-enum.rs  02-not-enum.rs  03-out-of-order.rs
src/: lib.rs
