[package]
name = "derive_debug"
version = "0.0.0"
autotests = false
edition = "2021"
publish = false

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/progress.rs"

[dev-dependencies]
trybuild = { version = "1.0.49", features = ["diff"] }

[dependencies]
quote = { version = "1.0.36" }
proc-macro2 = "1.0.85"
syn = { version = "2.0.66", features = ["extra-traits", "visit"] }
