[package]
name = "derive_enums"
version = "0.0.0"
autotests = false
edition = "2021"
publish = false
description = "打印枚举值"

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/progress.rs"

[dev-dependencies]
trybuild = "1.0"

[dependencies]
syn = {version =  "2.0.66",features = ["extra-traits"] }
quote = {version = "1.0.36"}
proc-macro2 = "1.0.85"
